<resources>
    <string name="app_name">We Love Milano</string>
    <string name="we_love_milano">We Love Milano</string>
    <string name="see_more">See More</string>
    <string name="places_to_visit">Places to visit</string>
    <string name="_1_il_duomo">1.Il Duomo</string>
    <string name="string_text_1">The massive Cathedral of Santa Maria Nascente, which the Milanese call just \"Il Duomo\" is among the world\'s largest (it holds up to 40,000 people) and most magnificent churches, the ultimate example of the Flamboyant Gothic style. At the front of the Duomo, near the central doorway, you can descend under Piazza del Duomo into the foundations of the Basilica di Santa Tecla (fourth-fifth and seventh century) and the fourth-century baptistery, Battistero di San Giovanni alle Fonti, which were discovered during the construction of the Milan Metro system. </string>
    <string name="string_text_2">Forming one side of Piazza del Duomo and opening on the other side to Piazza della Scala, the grand Galleria Vittorio Emanuele, was then the largest shopping arcade in Europe, with a dome soaring 48 meters above its mosaic floor. Marking the beginning of modern architecture in Italy, today it stands as a splendid example of 19th-century industrial iron and glass construction. And it\'s still a beautiful, vibrant place where locals meet for lunch or coffee in its elegant cafes and browse in its luxury shops. It is so much a part of local life that the inhabitants of Milan refer to it as \"il salotto\" (the salon).</string>
    <string name="_2_galleria_vittorio_emanuele_ii">2. Galleria Vittorio Emanuele II</string>
    <string name="castello_sforzesco">3.Castello Sforzesco</string>
    <string name="string_text_3">The Castello Sforzesco, held by the Visconti and the Sforza families who ruled Milan from 1277 to 1447 and from 1450 to 1535 respectively,houses the Musei del Castello Sforzesco, a series of museums, one of which features sculpture. The collection includes the Pietà Rondanini, Michelangelo\'s last masterpiece, brought here in 1953 from the Palazzo Rondanini in Rome. Other museums feature a collection of decorative art, prehistoric and Egyptian antiquities, a collection of musical history, and an armory of weapons and medieval armor.</string>
    <string name="sant_ambrogio">4.Sant\'Ambrogio</string>
    <string name="string_text_4">The church of Sant\'Ambrogio was founded  by St. Ambrose, who was born in Milan and is the city\'s patron saint. The present church is a masterpiece of Romanesque architecture, built in the 12th century around the choir from an earlier ninth-century church. There\'s a lot to see here, beginning with the large portico, also from the ninth century, and the atrium, whose carved stone capitals and portal rank it high among Europe\'s best examples of the Romanesque period. Inside, be sure to see the pulpit with late Romanesque carving, and the richly carved 4th-century Stilicone sarcophagus underneath it.</string>
    <string name="leonardo_da_vinci_national_museum_of_science_and_technology">5.Leonardo da Vinci National Museum of Science and Technology</string>
    <string name="string_text_5">Housed in a former Olivetan monastery, the museum illustrates the history of science and technology from the work of early scientists into modern times. Of particular interest is the Leonardo da Vinci Gallery with working models of many of his inventions and machinery, created from da Vinci\'s drawings. In the physics exhibits are apparatus used by Galileo, Newton, and Volta, and there are sections relating to optics, acoustics, telegraphy, transport, shipping, railroads, flying, metallurgy, motor vehicles, timekeeping, and timber. In all, more than 15,000 technical and scientific objects represent the history of Italian science, technology, and industry.</string>
    <string name="naviglio">6.Naviglio</string>
    <string name="string_text_6">For the young people who frequent the canal-side cafés and music clubs, Naviglio is one of the top things to do in Milan at night. Although it\'s the most active in the evening, go in the daytime for the boutiques and artists\' workshops, and for the restaurants and frequent festivals held here. In April, the neighborhood along the canal is filled with flowers for the Festa Di Fiori, and the Festa del Naviglio brings concerts, processions, crafts, and an antique market. Barges along the canals are decorated in mid-June for the Sagra di San Cristoforo (Festival of Saint Christopher), and the Orchestra Sinfonica di Milano Giuseppe Verdi performs about 50 concerts on Thursday and Friday evenings and Sunday afternoons at the Auditorium di Milano.</string>
</resources>